Refine interactive help text, preview scroll clamp, and bat availability handling